# airlynk-platform

./: .env.example  .gitignore  LICENSE  README.md  TEST_REPORT.mdtype mock_backend.py  api_logs.txt  api_logs2.txt  api_logs3.txt  bandit.json  check_login.py  docker-compose.yml  e2e_test.py  fix_mypy.py  mock_backend.py  openapi.json  package-lock.json  pyproject.toml  refactor.py  seed_airports.py  seed_operator.py  seed_pricing.py  seed_test_users.py  test_app.py  test_cors.py  test_login_api.py  test_notification_event.py  test_register.py  test_ws.html  update_imports.py
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.worker  __init__.py  alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2fff20ce2c7b_add_missing_models.py  49ba17a6949b_dummy.py  4e3ef6a1cff6_update_booking_status_enum.py  a90fdf897044_phase_3_migrations.py  bdfafe0b7d47_initial_schema_and_notification_domain.py  c1a2b3d4e5f6_add_booking_geo_columns_and_seed_roles.py  efb62a646b61_add_pricing_and_notification_domains.py  fabbe5861740_merge_heads.py
backend/scripts/: e2e_booking_test.py  seed_airports.py  seed_all.py  seed_phase1_airports.py
backend/services/: __init__.py
backend/services/airports/api/: routes.py
backend/services/airports/models/: airport.py
backend/services/airports/repository/: airport_repo.py
backend/services/airports/schemas/: airport.py
backend/services/airports/service/: airport_service.py
backend/services/api/: __init__.py
backend/services/api/app/: __init__.py  main.py
backend/services/auth/api/: routes.py
backend/services/auth/models/: user.py
backend/services/auth/repository/: auth_repository.py
backend/services/auth/schemas/: auth.py
backend/services/auth/service/: auth_service.py
backend/services/booking/api/: routes.py
backend/services/booking/events/: consumers.py  publishers.py
backend/services/booking/models/: booking.py  location.py
backend/services/booking/repository/: booking_repository.py
backend/services/notification/: worker.py
backend/services/worker/: __init__.py  celery_app.py  tasks.py
backend/shared/: __init__.py
backend/shared/cache/: __init__.py  redis_client.py
backend/shared/config/: __init__.py  settings.py
backend/shared/database/: __init__.py  base.py  base_reexport.py  session.py
backend/shared/events/: __init__.py  envelope.py
backend/shared/exceptions/: __init__.py  handlers.py
backend/shared/logging/: __init__.py  logger.py
backend/shared/messaging/: __init__.py  rabbitmq.py
backend/shared/middleware/: __init__.py  correlation.py  rbac.py  security_headers.py
backend/shared/observability/: __init__.py  metrics.py  tracing.py
backend/shared/schemas/: responses.py
backend/shared/security/: __init__.py  jwt_handler.py  password.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_health.py
backend/tests/unit/: test_config.py  test_event_envelope.py  test_exceptions.py  test_responses.py
backend/worker/: celery_app.py  tasks.py
docs/: API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATABASE_SCHEMA.md  DOCKER_STRATEGY.md  EVENT_CATALOG.md  INFRASTRUCTURE.md  OBSERVABILITY_PLAN.md  PRD.md  SECURITY.md  SECURITY_STANDARDS.md  SERVICE_TEMPLATE.md  TERRAFORM_STRUCTURE.md  TEST_ACCOUNTS.md  TEST_REPORT.md  WORKFLOWS.md  dashboard_guide.md  engineering_audit_report.md  metrics_catalog.md  observability_architecture.md  phase1_audit.md  phase_2_5_stabilization.md  runtime_validation.md
docs/adr/: ADR-001-Modular-Monolith.md  ADR-002-RabbitMQ.md  ADR-003-Redis-PubSub.md  ADR-004-OpenTelemetry.md  ADR-005-Celery.md  ADR-006-Redis-GEO.md  ADR-007-Distributed-Locking.md
docs/diagrams/: observability-topology.md
frontend/customer-web/: Dockerfile  package-lock.json  package.json  test_booking_flow.js  test_headers.js
frontend/operator-dashboard/: Dockerfile  package-lock.json  package.json
infrastructure/nginx/: nginx.conf
observability/loki/: loki-config.yml
observability/prometheus/: prometheus-alerts.yml  prometheus.yml
observability/promtail/: promtail-config.yml
observability/tempo/: tempo-config.yml
test-data/: test_accounts.json
(+118 files in other folders)
